# jogo_cobrinha

./: .gitignore  README.md  pyproject.toml
snake_game/: __main__.py
