[project]
name = "pythonproject1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Maicom Ferreira <maicomferre3242@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playsound = "1.2.2"
#system-dependencies = ["python3-gi", "gir1.2-gtk-3.0"]
pygame = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
